--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-16 Tue 15:33]
+#+CAPTION: Clock summary at [2018-10-16 Tue 15:48]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:16* |       |      |   0.0 |
+| *Total time*                                                                | *16:30* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:16   |       |      |   0.0 |
-| Active                                                                      |         | 16:16 |      |   0.0 |
+| Stories                                                                     | 16:30   |       |      |   0.0 |
+| Active                                                                      |         | 16:30 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
@@ -34,7 +34,7 @@
 | OSX build is producing a large number of warnings                           |         |       | 0:37 |   0.0 |
 | AppVeyor is not building on GitHub commits                                  |         |       | 0:04 |   0.0 |
 | Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
-| Upgrade to c++ 17                                                           |         |       | 0:11 |   0.0 |
+| Upgrade to c++ 17                                                           |         |       | 0:25 |   0.0 |
 | High-level model thoughts                                                   |         |       | 3:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -322,6 +322,7 @@ returned to normal size.
 
 *** STARTED Upgrade to c++ 17                                         :story:
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 15:34]--[2018-10-16 Tue 15:48] =>  0:14
     CLOCK: [2018-10-16 Tue 13:44]--[2018-10-16 Tue 13:54] =>  0:10
     CLOCK: [2018-10-16 Tue 13:42]--[2018-10-16 Tue 13:43] =>  0:01
     :END:
