--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-16 Tue 22:14]
+#+CAPTION: Clock summary at [2018-10-17 Wed 06:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:23* |       |      |   0.0 |
+| *Total time*                                                                | *20:52* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:23   |       |      |   0.0 |
-| Active                                                                      |         | 20:23 |      |   0.0 |
+| Stories                                                                     | 20:52   |       |      |   0.0 |
+| Active                                                                      |         | 20:52 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:26 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
@@ -29,7 +29,7 @@
 | Add vcpkg support to osx builds                                             |         |       | 5:17 |   0.0 |
 | Remove all references to conan                                              |         |       | 0:13 |   0.0 |
 | Travis badge is not red when build is failing                               |         |       | 0:14 |   0.0 |
-| Ignore all failing tests                                                    |         |       | 0:50 |   0.0 |
+| Ignore all failing tests                                                    |         |       | 1:11 |   0.0 |
 | CTest warnings seem to be clipped                                           |         |       | 0:15 |   0.0 |
 | AppVeyor is not building on GitHub commits                                  |         |       | 0:04 |   0.0 |
 | OSX build is producing a large number of warnings                           |         |       | 0:37 |   0.0 |
@@ -37,6 +37,7 @@
 | Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
 | Update c++ reference model build                                            |         |       | 1:43 |   0.0 |
 | High-level model thoughts                                                   |         |       | 5:14 |   0.0 |
+| Linking errors on windows for debug builds                                  |         |       | 0:08 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -247,6 +248,7 @@ ongoing build. Lets ignore it for now.
 *** COMPLETED Ignore all failing tests                                :story:
     CLOSED: [2018-10-16 Tue 12:29]
     :LOGBOOK:
+    CLOCK: [2018-10-17 Wed 06:15]--[2018-10-17 Wed 06:36] =>  0:21
     CLOCK: [2018-10-16 Tue 12:11]--[2018-10-16 Tue 12:28] =>  0:17
     CLOCK: [2018-10-16 Tue 11:16]--[2018-10-16 Tue 11:30] =>  0:24
     CLOCK: [2018-10-16 Tue 10:36]--[2018-10-16 Tue 10:55] =>  0:19
@@ -407,7 +409,10 @@ Notes:
   that just reads a model and returns the injector version.
 - the distribution channels are a function of the product API.
 
-*** Linking errors on windows for debug builds                        :story:
+*** STARTED Linking errors on windows for debug builds                :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 22:18]--[2018-10-16 Tue 22:26] =>  0:08
+    :END:
 
 It seems we are consistently having problems linking the debug builds
 on windows:
