--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-17 Wed 09:44]
+#+CAPTION: Clock summary at [2018-10-17 Wed 10:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *21:21* |       |      |   0.0 |
+| *Total time*                                                                | *22:28* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 21:21   |       |      |   0.0 |
-| Active                                                                      |         | 21:21 |      |   0.0 |
+| Stories                                                                     | 22:28   |       |      |   0.0 |
+| Active                                                                      |         | 22:28 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:46 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
@@ -37,6 +37,8 @@
 | Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
 | Update c++ reference model build                                            |         |       | 1:43 |   0.0 |
 | Linking errors on windows for debug builds                                  |         |       | 0:17 |   0.0 |
+| Create bitbbucket backups for reference implementation                      |         |       | 0:18 |   0.0 |
+| Read up on framework and API design                                         |         |       | 0:49 |   0.0 |
 | High-level model thoughts                                                   |         |       | 5:14 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -457,6 +459,24 @@ Notes:
 - problems with python dependencies: [[https://github.com/micropython/micropython/issues/3246][cpp-coveralls 0.4.0 came and
   broke Travis build]]
 
+*** COMPLETED Create bitbbucket backups for reference implementation  :story:
+    CLOSED: [2018-10-17 Wed 10:03]
+    :LOGBOOK:
+    CLOCK: [2018-10-17 Wed 09:45]--[2018-10-17 Wed 10:03] =>  0:18
+    :END:
+
+We should have all repos backed up.
+
+Created a mirror for all projects: https://bitbucket.org/MASD-Project.
+
+*** STARTED Read up on framework and API design                       :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-17 Wed 10:03]--[2018-10-17 Wed 10:52] =>  0:49
+    :END:
+
+Now that we are creating a top-level API for Dogen we should really
+read up on books about good API design.
+
 *** STARTED High-level model thoughts                                 :story:
     :LOGBOOK:
     CLOCK: [2018-10-16 Tue 15:49]--[2018-10-16 Tue 17:43] =>  1:54
@@ -492,10 +512,6 @@ for logging etc. We can just replace these with string views.
 Links:
 
 - [[https://www.bfilipek.com/2018/10/strings17talk.html][Let's Talk About String Operations in C++17]]
-
-*** Create bitbbucket backups for reference implementation            :story:
-
-We should have all repos backed up.
 
 *** Add basic "diff mode"                                             :story:
 
