--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-17 Wed 10:53]
+#+CAPTION: Clock summary at [2018-10-17 Wed 18:01]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:28* |       |      |   0.0 |
+| *Total time*                                                                | *25:05* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:28   |       |      |   0.0 |
-| Active                                                                      |         | 22:28 |      |   0.0 |
+| Stories                                                                     | 25:05   |       |      |   0.0 |
+| Active                                                                      |         | 25:05 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:46 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
@@ -38,8 +38,9 @@
 | Update c++ reference model build                                            |         |       | 1:43 |   0.0 |
 | Linking errors on windows for debug builds                                  |         |       | 0:17 |   0.0 |
 | Create bitbbucket backups for reference implementation                      |         |       | 0:18 |   0.0 |
-| Read up on framework and API design                                         |         |       | 0:49 |   0.0 |
-| High-level model thoughts                                                   |         |       | 5:14 |   0.0 |
+| Fix warnings on windows                                                     |         |       | 0:17 |   0.0 |
+| Read up on framework and API design                                         |         |       | 1:03 |   0.0 |
+| High-level model thoughts                                                   |         |       | 7:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -469,8 +470,23 @@ We should have all repos backed up.
 
 Created a mirror for all projects: https://bitbucket.org/MASD-Project.
 
+*** STARTED Fix warnings on windows                                   :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-17 Wed 13:47]--[2018-10-17 Wed 14:04] =>  0:17
+    :END:
+
+We have a large number of warnings on windows, try to see if we can
+fix them.
+
+: dogen.formatting\types\indent_filter.hpp(164): warning C4267: 'argument': conversion from 'size_t' to 'int', possible loss of data
+: dogen.probing\src\types\metrics_builder.cpp(86): warning C4244: 'argument': conversion from '_Rep' to 'const unsigned long', possible loss of data
+: dogen.generation.cpp\src\types\formatters\msbuild_targets_formatter.cpp(123): warning C4267: 'argument': conversion from 'size_t' to 'const unsigned int', possible loss of data
+: dogen.generation.cpp\src\types\formatters\test_data\class_implementation_formatter.cpp(212): warning C4267: 'initializing': conversion from 'size_t' to 'unsigned int'
+: dogen.generation.csharp\src\types\formatters\types\class_formatter.cpp(188): warning C4267: 'argument': conversion from 'size_t' to 'const unsigned int', possible loss of data
+
 *** STARTED Read up on framework and API design                       :story:
     :LOGBOOK:
+    CLOCK: [2018-10-17 Wed 14:05]--[2018-10-17 Wed 14:19] =>  0:14
     CLOCK: [2018-10-17 Wed 10:03]--[2018-10-17 Wed 10:52] =>  0:49
     :END:
 
@@ -479,6 +495,8 @@ read up on books about good API design.
 
 *** STARTED High-level model thoughts                                 :story:
     :LOGBOOK:
+    CLOCK: [2018-10-17 Wed 16:26]--[2018-10-17 Wed 18:01] =>  1:35
+    CLOCK: [2018-10-17 Wed 14:39]--[2018-10-17 Wed 15:10] =>  0:31
     CLOCK: [2018-10-16 Tue 15:49]--[2018-10-16 Tue 17:43] =>  1:54
     CLOCK: [2018-10-16 Tue 13:55]--[2018-10-16 Tue 14:55] =>  1:27
     CLOCK: [2018-10-11 Thu 16:06]--[2018-10-11 Thu 18:26] =>  2:20
@@ -502,6 +520,11 @@ Notes:
   another endpoint, and users probably don't really need something
   that just reads a model and returns the injector version.
 - the distribution channels are a function of the product API.
+- according to the [[https://docs.microsoft.com/en-us/dotnet/standard/design-guidelines/][Framework Design Guidelines]], we should design the
+  API from scenarios. We should create a specification document that
+  can be added to the manual for this.
+
+
 
 *** Update static strings to string views                             :story:
 
