--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,34 +13,35 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-17 Wed 18:01]
-| <75>                                                                        |         |       |      |       |
-| Headline                                                                    | Time    |       |      |     % |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:05* |       |      |   0.0 |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:05   |       |      |   0.0 |
-| Active                                                                      |         | 25:05 |      |   0.0 |
-| Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
-| Sprint and product backlog grooming                                         |         |       | 0:46 |   0.0 |
-| Create a document with release steps                                        |         |       | 0:11 |   0.0 |
-| Add support for kcov                                                        |         |       | 3:09 |   0.0 |
-| Build on tags for Windows                                                   |         |       | 0:09 |   0.0 |
-| Add vcpkg support to osx builds                                             |         |       | 5:17 |   0.0 |
-| Remove all references to conan                                              |         |       | 0:13 |   0.0 |
-| Travis badge is not red when build is failing                               |         |       | 0:14 |   0.0 |
-| Ignore all failing tests                                                    |         |       | 1:11 |   0.0 |
-| CTest warnings seem to be clipped                                           |         |       | 0:15 |   0.0 |
-| AppVeyor is not building on GitHub commits                                  |         |       | 0:04 |   0.0 |
-| OSX build is producing a large number of warnings                           |         |       | 0:37 |   0.0 |
-| Upgrade to c++ 17                                                           |         |       | 0:25 |   0.0 |
-| Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
-| Update c++ reference model build                                            |         |       | 1:43 |   0.0 |
-| Linking errors on windows for debug builds                                  |         |       | 0:17 |   0.0 |
-| Create bitbbucket backups for reference implementation                      |         |       | 0:18 |   0.0 |
-| Fix warnings on windows                                                     |         |       | 0:17 |   0.0 |
-| Read up on framework and API design                                         |         |       | 1:03 |   0.0 |
-| High-level model thoughts                                                   |         |       | 7:20 |   0.0 |
+#+CAPTION: Clock summary at [2018-10-18 Thu 13:14]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *29:06* |       |       |   0.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 29:06   |       |       |   0.0 |
+| Active                                                                      |         | 29:06 |       |   0.0 |
+| Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       |  0:46 |   0.0 |
+| Create a document with release steps                                        |         |       |  0:11 |   0.0 |
+| Add support for kcov                                                        |         |       |  3:09 |   0.0 |
+| Build on tags for Windows                                                   |         |       |  0:09 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       |  5:17 |   0.0 |
+| Remove all references to conan                                              |         |       |  0:13 |   0.0 |
+| Travis badge is not red when build is failing                               |         |       |  0:14 |   0.0 |
+| Ignore all failing tests                                                    |         |       |  1:11 |   0.0 |
+| CTest warnings seem to be clipped                                           |         |       |  0:15 |   0.0 |
+| AppVeyor is not building on GitHub commits                                  |         |       |  0:04 |   0.0 |
+| OSX build is producing a large number of warnings                           |         |       |  0:37 |   0.0 |
+| Upgrade to c++ 17                                                           |         |       |  0:25 |   0.0 |
+| Windows MSI is very large                                                   |         |       |  0:26 |   0.0 |
+| Update c++ reference model build                                            |         |       |  1:43 |   0.0 |
+| Linking errors on windows for debug builds                                  |         |       |  0:17 |   0.0 |
+| Create bitbbucket backups for reference implementation                      |         |       |  0:18 |   0.0 |
+| Fix warnings on windows                                                     |         |       |  0:17 |   0.0 |
+| Fix warnings on OSX                                                         |         |       |  0:19 |   0.0 |
+| Read up on framework and API design                                         |         |       |  1:23 |   0.0 |
+| High-level model thoughts                                                   |         |       | 10:42 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -484,8 +485,19 @@ fix them.
 : dogen.generation.cpp\src\types\formatters\test_data\class_implementation_formatter.cpp(212): warning C4267: 'initializing': conversion from 'size_t' to 'unsigned int'
 : dogen.generation.csharp\src\types\formatters\types\class_formatter.cpp(188): warning C4267: 'argument': conversion from 'size_t' to 'const unsigned int', possible loss of data
 
+*** STARTED Fix warnings on OSX                                       :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-18 Thu 09:16]--[2018-10-18 Thu 09:35] =>  0:19
+    :END:
+
+We are seeing a lot of warnings on OSX which makes it difficult to
+spot real problems. We need to get rid of the spurious ones.
+
+[[https://github.com/Microsoft/vcpkg/issues/4497][Ticket raised]] with vcpkg.
+
 *** STARTED Read up on framework and API design                       :story:
     :LOGBOOK:
+    CLOCK: [2018-10-18 Thu 09:36]--[2018-10-18 Thu 09:56] =>  0:20
     CLOCK: [2018-10-17 Wed 14:05]--[2018-10-17 Wed 14:19] =>  0:14
     CLOCK: [2018-10-17 Wed 10:03]--[2018-10-17 Wed 10:52] =>  0:49
     :END:
@@ -495,6 +507,8 @@ read up on books about good API design.
 
 *** STARTED High-level model thoughts                                 :story:
     :LOGBOOK:
+    CLOCK: [2018-10-18 Thu 09:57]--[2018-10-18 Thu 13:14] =>  3:17
+    CLOCK: [2018-10-18 Thu 09:10]--[2018-10-18 Thu 09:15] =>  0:05
     CLOCK: [2018-10-17 Wed 16:26]--[2018-10-17 Wed 18:01] =>  1:35
     CLOCK: [2018-10-17 Wed 14:39]--[2018-10-17 Wed 15:10] =>  0:31
     CLOCK: [2018-10-16 Tue 15:49]--[2018-10-16 Tue 17:43] =>  1:54
@@ -523,8 +537,6 @@ Notes:
 - according to the [[https://docs.microsoft.com/en-us/dotnet/standard/design-guidelines/][Framework Design Guidelines]], we should design the
   API from scenarios. We should create a specification document that
   can be added to the manual for this.
-
-
 
 *** Update static strings to string views                             :story:
 
@@ -762,6 +774,8 @@ meta-data option, which is supplied with each model and even more
 interesting, can be used with profiling. This means we can create
 profiles for specific purposes (ODB, lisp, etc) and then reuse them in
 different projects.
+
+We should do the same thing for =--delete-extra-files=.
 
 *** Update all stereotypes to masd                                    :story:
 
