--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-18 Thu 14:51]
+#+CAPTION: Clock summary at [2018-10-18 Thu 16:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *29:23* |       |       |   0.0 |
+| *Total time*                                                                | *30:47* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 29:23   |       |       |   0.0 |
-| Active                                                                      |         | 29:23 |       |   0.0 |
+| Stories                                                                     | 30:47   |       |       |   0.0 |
+| Active                                                                      |         | 30:47 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:46 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -38,11 +38,11 @@
 | Update c++ reference model build                                            |         |       |  1:43 |   0.0 |
 | Linking errors on windows for debug builds                                  |         |       |  0:17 |   0.0 |
 | Create bitbbucket backups for reference implementation                      |         |       |  0:18 |   0.0 |
+| Update vcpkg with boost.di and visibility settings                          |         |       |  1:26 |   0.0 |
 | Fix warnings on windows                                                     |         |       |  0:17 |   0.0 |
 | Fix warnings on OSX                                                         |         |       |  0:19 |   0.0 |
 | Read up on framework and API design                                         |         |       |  1:23 |   0.0 |
 | Design a top-level Dogen API                                                |         |       | 10:52 |   0.0 |
-| Update vcpkg with boost.di and visibility settings                          |         |       |  0:02 |   0.0 |
 | Check that C++ 17 is enabled on MSVC                                        |         |       |  0:05 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -473,6 +473,19 @@ We should have all repos backed up.
 
 Created a mirror for all projects: https://bitbucket.org/MASD-Project.
 
+*** COMPLETED Update vcpkg with boost.di and visibility settings      :story:
+    CLOSED: [2018-10-18 Thu 16:10]
+    :LOGBOOK:
+    CLOCK: [2018-10-18 Thu 14:46]--[2018-10-18 Thu 16:10] =>  1:24
+    CLOCK: [2018-10-18 Thu 14:43]--[2018-10-18 Thu 14:45] =>  0:02
+    :END:
+
+Work for the next vcpkg update:
+
+- pull in [[https://github.com/boost-experimental/di][boost.di]].
+- add flags as per visibility warnings story.
+- update docs with all the workarounds.
+
 *** STARTED Fix warnings on windows                                   :story:
     :LOGBOOK:
     CLOCK: [2018-10-17 Wed 13:47]--[2018-10-17 Wed 14:04] =>  0:17
@@ -540,16 +553,6 @@ Notes:
 - according to the [[https://docs.microsoft.com/en-us/dotnet/standard/design-guidelines/][Framework Design Guidelines]], we should design the
   API from scenarios. We should create a specification document that
   can be added to the manual for this.
-
-*** STARTED Update vcpkg with boost.di and visibility settings        :story:
-    :LOGBOOK:
-    CLOCK: [2018-10-18 Thu 14:43]--[2018-10-18 Thu 14:45] =>  0:02
-    :END:
-
-Work for the next vcpkg update:
-
-- pull in [[https://github.com/boost-experimental/di][boost.di]].
-- add flags as per visibility warnings story.
 
 *** STARTED Check that C++ 17 is enabled on MSVC                      :story:
     :LOGBOOK:
